# rst-table-span

./: .gitignore  LICENSE  README.rst  pyproject.toml  rst_table_span.py
example/: conf.py  demo.rst  justfile  requirements.txt
